2017-08-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Adapt html doc generation to changes in generate_html

	* admin/build_tools/get_allpurpose_html_options.m: Adapt html doc
	generation to changes in generate_html.

2017-07-25  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/bsxfun.m: Fix colnames/rownames selection

	* arrays/@stk_dataframe/bsxfun.m: Fix colnames/rownames selection.

2017-07-24  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_model_gpposterior/stk_predict_leaveoneout.m: Ensure var >= 0

	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: Make sure
	that variances will always be non-negative.

	Benchmark virtual LOO-CV speedup

	* misc/benchmarks/stk_benchmark_loocv.m: New benchmark script to
	evaluate to speedup brought by the implementation of virtual LOO
	cross validation.

	Move some LOO-CV unit tests

	* core/stk_predict_leaveoneout.m: Move unit tests for correctness
	of virtual LOO-CV formulas to
	@stk_model_gpposterior/stk_predict_leaveoneout.m.
	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: Here.

	Keep a copy of the original "direct" implementation of LOO-CV.

	* core/@stk_model_gpposterior/stk_predict_leaveoneout_direct.m:
	Internal function, which is simply a copy of our original,
	"direct" implementation of LOO-CV.  Can be used to check
	correctness of virtual LOO formulas, and for benchmarking.
	* admin/octpkg/INDEX: Hide internal function from the index.

2017-07-23  Remi Stroh  <remi.stroh@lne.fr>

	stk_predict_leaveoneout.m: Use virtual Leave-One-Out formula (ticket #35)

	* core\@stk_model_gpposterior\stk_predict_leaveoneout.m: Replace
	the naive expression of the cross-validation, by the virtual
	leave-one-out formula.
	* core\stk_predict_leaveoneout.m: Add a test to check virtual
	LOO formula.

2017-07-12  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_benchmark_predict.m: New function to benchmark stk_predict

	* misc/benchmarks/stk_benchmark_predict.m: New function to